sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: reassignment to val
			i = 1
                          ^AlgGnomeSort:12: error: reassignment to val
			i = i-1
                          ^