sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	for (i <- 0 to getNombreValeurs-1) {
		if (i==0) {
			i = 1
		}
		if (i==getNombreValeurs) {
			return;
		}
		if (plusPetit(i+1,i)) {
			echange(i,i+1)
			i = i-1
		}
	}
}